adjust todayAt wordings for each locale
This reverts commit 259aa971979d3e2ad1313ca6bd242922eb68a565.

--- a/packages/site/app/i18n/de.json
+++ b/packages/site/app/i18n/de.json
@@ -1,6 +1,7 @@
 {
     "defaultPlaceholder": "Triff eine Auswahl",
     "donate": "Spenden",
+    "todayAt": "{{ date, h:mm }}",
     "delete": "Löschen",
     "settings": "Einstellungen",
     "help": "Hilfe",
