--- a/packages/site/app/i18n/it.json
+++ b/packages/site/app/i18n/it.json
@@ -636,6 +636,7 @@
     "members": "Membri",
     "formatMemberYou": "In questo placeholder, sei tu.",
     "miscellaneous": "Varie",
+    "todayAt": "{{ date, h:mm }}",
     "badge": {
         "server": "SERVER",
         "app": "APP"
