feat(site): redesign buttons, `todayAt` translations
* Update button styles for UI redesign
* Remove "Today at" wording

---------

Co-authored-by: shay <43248357+shayypy@users.noreply.github.com>

--- a/packages/site/app/i18n/ar.json
+++ b/packages/site/app/i18n/ar.json
@@ -82,7 +82,7 @@
     "embedEmpty": "لا يمكن ترك الرسالة المضمنة فارغة",
     "embedsTooLarge": "لا يمكن ان تحتوي الرسالة المضمنة على اكثر من 6000 حرف (حالياَ لديك {{count}} حرف اكثر من اللازم)",
     "resetEditor": "مسح الكل",
-    "todayAt": "اليوم في {{ date, h:mm A }}",
+    "todayAt": "{{ date, h:mm }}",
     "timestamp": {
         "time": "{{ date, h:mm A }}",
         "time_verbose": "{{ date, h:mm:ss A }}",
