--- a/packages/site/app/i18n/it.json
+++ b/packages/site/app/i18n/it.json
@@ -636,7 +636,7 @@
     "members": "Membri",
     "formatMemberYou": "In questo placeholder, sei tu.",
     "miscellaneous": "Varie",
-    "todayAt": "Oggi alle {{ date, h:mm A }}",
+    "todayAt": "{{ date, h:mm }}",
     "badge": {
         "server": "SERVER",
         "app": "APP"
