feat(site): link embed vimeo support

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -198,7 +198,8 @@
   "linkEmbedsImageLimit": "Link embeds can have one thumbnail or up to 4 large images, but not both.",
   "linkEmbedsNoVideoAndImage": "Link embeds cannot have a video paired with an image. Remove your video in order to add images.",
   "linkEmbedsNoImagesAndVideo": "Link embeds cannot have a video paired with an image. Remove all images in order to add a video.",
-  "linkEmbedsVideoUrl": "URL (direct link or YouTube)",
+  "linkEmbedsVideoUrl": "URL (direct link, YouTube, Vimeo)",
+  "linkEmbedsVideoUrlDirect": "URL (direct link only)",
   "donate": "Donate",
   "deluxe": "Deluxe",
   "lifetime": "Lifetime",
