feat(site): post-type link embeds (draft)

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -137,6 +137,9 @@
   "previewInfo": "Preview Info",
   "editingBackupNote": "You're editing a backup, so your work is saved periodically while you edit. In order to share this message with others, use the \"$t(share)\" button.",
   "editingLinkBackupNote": "You're editing a backup, so your work is saved periodically while you edit.",
+  "linkEmbedType": "Embed Type (<0>what is this?</0>)",
+  "linkEmbedTypeStandard": "Standard (no markdown, more flexible)",
+  "linkEmbedTypeMastodon": "Post (markdown, required author & footer)",
   "linkEmbedCacheNote": "Discord caches link embeds for 30 minutes. <0>Copy this partially randomized link</0> to force Discord to re-fetch the data. Link embeds are not updated for past messages (you need to edit the message).",
   "channel": "Channel",
   "webhookChannelMentionAndThreads": "<#{{0}}> (and its threads)",
