chore(site): wording

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -143,7 +143,7 @@
   "linkEmbedCacheNote": "Discord caches link embeds for 30 minutes. <0>Copy this partially randomized link</0> to force Discord to re-fetch the data. Link embeds are not updated for past messages (you need to edit the message).",
   "channel": "Channel",
   "webhookChannelMentionAndThreads": "<#{{0}}> (and its threads)",
-  "cannotChangeChannel": "Webhook channel must be set inside Discord or from the <0>server webhooks menu</0>.",
+  "cannotChangeChannel": "Set the webhook's channel in Discord or the <0>server webhooks menu</0>.",
   "requestedBy": "Requested on Discohook by {{username}}",
   "resetAvatar": "Remove",
   "webhookCreated": "Webhook Created",
