--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -528,6 +528,10 @@
   "pasteCmd": "Press \u2318V",
   "pasteCtrl": "Press Ctrl+V",
   "file": "File",
+  "filename": "Filename",
+  "fileDescription": "Description (alt text)",
+  "fileDescriptionPlaceholder": "Add a description",
+  "markSpoiler": "Mark as spoiler",
   "flags": "Flags",
   "flagsOptional": "Flags (optional)",
   "messageFlagsNote": "Flags are optional message features that can be enabled or disabled.",
