feat(site): draft component-based editor

--- a/packages/site/app/i18n/ar.json
+++ b/packages/site/app/i18n/ar.json
@@ -389,7 +389,11 @@
     "addRow": "اضافة صف أفقي",
     "components": "عناصر",
     "linkButton": "زِر الرابط",
-    "rowN": "صف أفقي {{n}}",
+    "componentN": {
+        "1": "صف أفقي {{n}}",
+        "2": "زِر {{n}}",
+        "2_text": "زِر {{n}} - {{text}}"
+    },
     "appSecretUsageNote": "لتسجيل أوامر للبوت, يجب ان تضع الرمز السري \"Secret\" للبوت او الرمز المميز \"Token\". اذا وضعت الرمز المميز \"Token\", لا تحتاج ان تضع الرمز السري \"Secret\".",
     "appClearSecret": "ازالة الرمز السري Secret",
     "appSecretHiddenNote": "لأسباب الأمان, الرمز السري \"Secret\" للبوت الخاص بك لن يظهر لك بعد ان تضعه هنا. اذا تغير الرمز السري \"Secret\" للبوت الخاص بك في اي وقت, اضغط \"ازالة الرمز السري Secret\" ثم ادخل الرمز السري \"Secret\" الجديد.",
@@ -397,8 +401,6 @@
     "addComponents": "اضافة عناصر",
     "componentsPossibleWebhook": "واحدة او اكثر من الويبهوك خاصتك مملوكين من قِبل برنامج غير ديسكوهوك, بالتالي يمكنك اضافة ازرار الروابط فقط. قم بإضافة ويبهوك مملوكة من قِبل ديسكوهوك لتستخدم عناصر مختلفة.",
     "message": "رسالة",
-    "buttonN": "زِر {{n}}",
-    "buttonNText": "زِر {{n}} - {{text}}",
     "emoji": "ايموجي",
     "label": "علامة",
     "disabled": "مٌطفأ",
