--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -398,9 +398,29 @@
   "message": "Message",
   "messageN": "Message {{n}}",
   "messageNText": "Message {{n}} - {{text}}",
-  "rowN": "Row {{n}}",
-  "buttonN": "Button {{n}}",
-  "buttonNText": "Button {{n}} - {{text}}",
+  "componentN": {
+    "1": "Row {{n}}",
+    "2": "Button {{n}}",
+    "2_text": "Button {{n}} - {{text}}",
+    "9": "Section {{n}}",
+    "9_text": "Section {{n}} - {{text}}",
+    "10": "Text {{n}}",
+    "10_text": "Text {{n}} - {{text}}",
+    "12": "Gallery {{n}}",
+    "12_text": "Gallery {{n}} - {{text}}",
+    "13": "File {{n}}",
+    "13_text": "File {{n}} - {{text}}",
+    "17": "Container {{n}}",
+    "17_text": "Container {{n}} - {{text}}"
+  },
+  "addText": "Add Text",
+  "section": "Section",
+  "accessory": "Accessory",
+  "mediaGallery": "Media Gallery",
+  "addMedia": "Add Media",
+  "separator": "Separator",
+  "container": "Container",
+  "actionRow": "Action Row",
   "emoji": "Emoji",
   "label": "Label",
   "disabled": "Disabled",
@@ -537,12 +557,14 @@
   "messageFlagsNote": "Flags are optional message features that can be enabled or disabled.",
   "messageFlagsNoteSuppressNotifications": "Any mentions in the message will not be delivered to users.",
   "messageFlagsNoteSuppressEmbeds": "All embeds, including link embeds, will not be shown.",
+  "messageFlagsNoteIsComponentsV2": "Use a new component-based message layout",
   "messageFlag": {
     "4": "Hide embeds",
     "32": "Has thread",
     "64": "Hidden (ephemeral)",
     "4096": "Silent",
-    "8192": "Is voice message"
+    "8192": "Is voice message",
+    "32768": "Components V2"
   },
   "random": "Random",
   "messageActionGuideNote": "Confused? Check out <0>recipes - message buttons</0>.",
