--- a/packages/site/app/i18n/it.json
+++ b/packages/site/app/i18n/it.json
@@ -301,7 +301,6 @@
     },
     "addComponentType": "Aggiungi $t(componentShort.{{type}})",
     "disabled": "Disattivato",
-    "buttonNText": "Pulsante {{n}} - {{text}}",
     "embed": "Embed",
     "sidebarColor": "Colore della Barra laterale",
     "noDescription": "Nessuna descrizione",
@@ -342,7 +341,6 @@
     },
     "backToTriggers": "Torna ai Trigger",
     "botTokenHiddenNote": "Per motivi di sicurezza, il tuo token non ti sarà mai mostrato dopo che lo salvi qui. Se hai resettato il tuo token, premi \"Resetta Token\" e salva il nuovo.",
-    "buttonN": "Pulsante {{n}}",
     "embedN": "Embed {{n}}",
     "componentsNotLoggedIn": "Non hai eseguito l'accesso, quindi non puoi salvare questo componente sul tuo account, e i componenti con più azioni non saranno eseguiti. Se vuoi solo far vedere i pulsanti, puoi selezionare l'opzione $t(disabled).",
     "embedNText": "Embed {{n}} - {{text}}",
@@ -361,7 +359,11 @@
     "message": "Messaggio",
     "messageN": "Messaggio {{n}}",
     "messageNText": "Messaggio {{n}} - {{text}}",
-    "rowN": "Riga {{n}}",
+    "componentN": {
+        "1": "Riga {{n}}",
+        "2": "Pulsante {{n}}",
+        "2_text": "Pulsante {{n}} - {{text}}"
+    },
     "componentEditShiftSkipTip": "Consiglio: La prossima volta tieni premuto shift per andare direttamente alla pagina di modifica.",
     "deleteComponent": "Elimina Componente",
     "messageComponent": "Componenti del Messaggio",
