feat(site): file component

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -406,6 +406,7 @@
   "attachment": "Attachment",
   "separatorLine": "Divider Line",
   "separatorSize": "Size",
+  "fileMissing": "This component references a file that was not found in the files section. To resolve this issue, re-upload the file or remove the component.<br/><br/>This is expected when opening links, as files are too large to reliably be shared.",
   "linkButton": "Link Button",
   "addComponentType": "Add $t(componentShort.{{type}})",
   "editingComponentFromUser": "Editing a $t(component.{{type}}, lowercase) from",
@@ -554,6 +555,7 @@
   "filesCount": "Files ({{ count }}/10)",
   "filesComponentsOnly": "There's nothing here. Files can be added by clicking the upload or paste buttons in a media gallery item, thumbnail, or file component.",
   "addFile": "Add File",
+  "replaceFile": "Replace File",
   "pasteFile": "Paste File",
   "pasteCmd": "Press \u2318V",
   "pasteCtrl": "Press Ctrl+V",
