--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -406,6 +406,8 @@
   "attachment": "Attachment",
   "separatorLine": "Divider Line",
   "separatorSize": "Size",
+  "small": "Small",
+  "large": "Large",
   "fileMissing": "This component references a file that was not found in the files section. To resolve this issue, re-upload the file or remove the component. This is expected when opening links, as files are too large to reliably be shared.",
   "linkButton": "Link Button",
   "addComponentType": "Add $t(componentShort.{{type}})",
