refactor(site): on-demand translation assets

--- a/packages/site/public/i18n/ar.json
+++ b/packages/site/public/i18n/ar.json
@@ -41,7 +41,7 @@
         "ar": "العربية",
         "zh": "الصينية, الصين",
         "nl": "الهولندية",
-        "en-US": "الانجليزية, الولايات المتحدة",
+        "en": "الانجليزية, الولايات المتحدة",
         "en-GB": "الانجليزية, المملكة المتحدة",
         "fr": "الفرنسية",
         "es": "الاسبانية",
