--- a/packages/site/public/i18n/cs.json
+++ b/packages/site/public/i18n/cs.json
@@ -72,7 +72,7 @@
         "ar": "Arabsky",
         "zh": "Čínsky, Čína",
         "nl": "Holandsky",
-        "en-US": "Anglicky, USA",
+        "en": "Anglicky, USA",
         "en-GB": "Anglicky, UK",
         "fr": "Francouzsky",
         "es": "Španělsky",
