--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -76,7 +76,7 @@
     "ar": "Arabic",
     "zh": "Chinese, China",
     "nl": "Dutch",
-    "en-US": "English, US",
+    "en": "English, US",
     "en-GB": "English, UK",
     "fr": "French",
     "es": "Spanish",
