--- a/packages/site/public/i18n/es.json
+++ b/packages/site/public/i18n/es.json
@@ -26,7 +26,7 @@
         "en-GB": "Inglés, Reino Unido",
         "nl": "Holandés",
         "fr": "Francés",
-        "en-US": "Inglés, US",
+        "en": "Inglés, US",
         "de": "Alemán",
         "it": "Italiano"
     },
