--- a/packages/site/public/i18n/fr.json
+++ b/packages/site/public/i18n/fr.json
@@ -4,7 +4,7 @@
         "ar": "Arabe",
         "zh": "Chinois, Chine",
         "nl": "Néerlandais",
-        "en-US": "Anglais, États-Unis",
+        "en": "Anglais, États-Unis",
         "en-GB": "Anglais, Royaume-Uni",
         "fr": "Français",
         "it": "Italien",
