--- a/packages/site/public/i18n/nl.json
+++ b/packages/site/public/i18n/nl.json
@@ -2,7 +2,7 @@
     "locales": {
         "nl": "Nederlands",
         "ar": "Arabisch",
-        "en-US": "Engels, VS",
+        "en": "Engels, VS",
         "en-GB": "Engels, VK",
         "fr": "Frans",
         "zh": "Chinees, China"
