--- a/packages/site/public/i18n/de.json
+++ b/packages/site/public/i18n/de.json
@@ -70,7 +70,7 @@
         "es": "Spanisch",
         "zh": "Chinesisch, China",
         "nl": "Niederländisch",
-        "en-US": "Englisch, US",
+        "en": "Englisch, US",
         "en-GB": "Englisch, UK",
         "fr": "Französisch",
         "ar": "Arabisch",
