--- a/packages/site/public/i18n/ru.json
+++ b/packages/site/public/i18n/ru.json
@@ -4,7 +4,7 @@
         "ar": "Арабский",
         "zh": "Китайский",
         "nl": "Нидерландский",
-        "en-US": "Английский (США)",
+        "en": "Английский (США)",
         "en-GB": "Английский (Британия)",
         "fr": "Французский",
         "es": "Испанский",
