chore(site): new name for emojis & stickers

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -262,7 +262,7 @@
     "ManageNicknames": "Manage Nicknames",
     "ManageRoles": "Manage Roles",
     "ManageWebhooks": "Manage Webhooks",
-    "ManageEmojisAndStickers": "Manage Emojis & Stickers",
+    "ManageEmojisAndStickers": "Manage Expressions",
     "UseApplicationCommands": "Use App Commands",
     "RequestToSpeak": "Request to Speak",
     "ManageEvents": "Manage Events",
