refactor: bot and bot-site component editing

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -414,6 +414,10 @@
   "addComponentType": "Add $t(componentShort.{{type}})",
   "editingComponentFromUser": "Editing a $t(component.{{type}}, lowercase) from",
   "messageMaxRowsNote": "The maximum number of rows per message is {{count}}.",
+  "messageMaxRowsV2Note": "The maximum number of components in a stacks-based message is {{count}}, so no more rows can be added.",
+  "sectionAccessoryNotMovable": "You cannot add rows or move the $t(componentShort.{{type}}, lowercase) because it is an accessory.",
+  "moveComponentHere": "Move $t(componentShort.{{type}})",
+  "deleteRow": "Delete Row",
   "message": "Message",
   "messageN": "Message {{n}}",
   "messageNText": "Message {{n}} - {{text}}",
