feat(site): message creation prompt (draft)

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -112,7 +112,13 @@
   "previewAll": "Preview All",
   "share": "Share",
   "shareMessage": "Share Message",
+  "new": "NEW",
   "addMessage": "Add Message",
+  "defaultMessageCreationChoice": "Default New Message Type",
+  "standardMessage": "Standard Message",
+  "standardMessageDescription": "Can display text, then attachments, then embeds. If you aren't sure, choose this. Hold shift when clicking Add Message to use this automatically (or change the default in your settings).",
+  "componentsMessage": "Components-based Message",
+  "componentsMessageDescription": "Can display text, media, files, and containers (similar to embeds) in any order! This is more customizable than a standard message, but it lacks some features like inline embed fields.",
   "developer": "Developer",
   "jsonEditor": "JSON Editor",
   "jsonPrettify": "Prettify JSON",
@@ -415,7 +421,7 @@
   "addComponentType": "Add $t(componentShort.{{type}})",
   "editingComponentFromUser": "Editing a $t(component.{{type}}, lowercase) from",
   "messageMaxRowsNote": "The maximum number of rows per message is {{count}}.",
-  "messageMaxRowsV2Note": "The maximum number of components in a stacks-based message is {{count}}, so no more rows can be added.",
+  "messageMaxRowsV2Note": "The maximum number of components in a components-based message is {{count}}, so no more rows can be added.",
   "sectionAccessoryNotMovable": "You cannot add rows or move the $t(componentShort.{{type}}, lowercase) because it is an accessory.",
   "moveComponentHere": "Move $t(componentShort.{{type}})",
   "deleteRow": "Delete Row",
