feat(site): switch to mui checkbox

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -69,7 +69,7 @@
   "messageDisplay": "Message Display",
   "cozy": "Cozy",
   "compact": "Compact",
-  "compactAvatars": "Show avatars in Compact mode",
+  "compactAvatars": "Show avatars",
   "editorPanes": "Editor Panes",
   "forceDualPane": "Always use dual-pane editor",
   "language": "Language",
