feat(site): switch to mui popovers
related to #20

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -602,6 +602,8 @@
   "embedEmpty": "Must contain text or an image",
   "embedsTooLarge": "Embeds must contain at most 6000 characters total (currently {{count}} too many)",
   "embedsHidden": "You have the \"Hide embeds\" flag enabled, so all embeds will be hidden.",
+  "mentions": "Mentions",
+  "emojis": "Emojis",
   "emojiPickerCustom": {
     "id": "Custom Emoji ID",
     "find": "How to find this",
