chore(bot): conditional migrate tip

--- a/packages/bot/src/i18n/en.json
+++ b/packages/bot/src/i18n/en.json
@@ -420,7 +420,8 @@
   },
   "noMigratableComponents": "This message has no registered, migratable components.",
   "noContentAvailable": "No content available",
-  "noComponentFlow": "There was no flow registered for this component. Click the button to configure a new flow. If this message has buttons from before September 5, 2024, you may need to run </buttons migrate:908884724087410729>.",
+  "noComponentFlow": "There was no flow registered for this component. Click the button to configure a new flow.",
+  "noComponentFlowMigratePrompt": "You may need to run </buttons migrate:908884724087410729> if this message has buttons from before September 5, 2024.",
   "componentWillExpire": "Please finish editing & submit this component within 2 weeks or the draft will be deleted.",
   "noTrigger": "This server has no trigger with that name.",
   "unnamedTrigger": "Unnamed trigger",
