feat(bot): quick edit part 1
content & embeds

--- a/packages/bot/src/i18n/en.json
+++ b/packages/bot/src/i18n/en.json
@@ -413,6 +413,9 @@
       "webhook": {
         "name": "Webhook Info"
       },
+      "quickedit": {
+        "name": "Quick Edit"
+      },
       "debug": {
         "name": "Debug"
       }
