--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -581,7 +581,7 @@
   "flags": "Flags",
   "flagsOptional": "Flags (optional)",
   "messageFlagsNote": "Flags are optional message features that can be enabled or disabled.",
-  "messageFlagsNoteSuppressNotifications": "Any mentions in the message will not be delivered to users.",
+  "messageFlagsNoteSuppressNotifications": "Mentions in the message will not deliver notifications. Use the Allowed Mentions menu for more control.",
   "messageFlagsNoteSuppressEmbeds": "All embeds, including link embeds, will not be shown.",
   "messageFlagsNoteIsComponentsV2": "Use a new component-based message layout",
   "messageFlag": {
@@ -591,6 +591,15 @@
     "4096": "Silent",
     "8192": "Is voice message",
     "32768": "Components V2"
+  },
+  "allowedMentions": "Allowed Mentions",
+  "allowedMentionsNote": "If this is enabled, Discord will only send notifications & highlight messages for users and roles that are specified below. Mentions in embeds are never delivered.",
+  "enableAllowedMentions": "Control mentions in this message",
+  "allowedMentionsProps": {
+    "mentionEveryone": "@everyone and @here",
+    "automatic": "Automatic",
+    "automaticUsersNote": "All user mentions in content will be delivered. This is the default behavior without allowed mentions control.",
+    "automaticRolesNote": "All role mentions in content will be delivered. This is the default behavior without allowed mentions control."
   },
   "random": "Random",
   "messageActionGuideNote": "Confused? Check out <0>recipes - message buttons</0>.",
