feat(site): drawer

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -205,6 +205,8 @@
   "server_one": "Server",
   "server_other": "Servers",
   "noServers": "You don't appear to share any servers with Discohook Utils.",
+  "usingDiscohook": "Using Discohook",
+  "guides": "Guides",
   "inviteBot": "Invite Bot",
   "addToServer": "Add to Server",
   "favorite": "Favorite",
