feat(site): apply thread ID from webhook URL

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -63,6 +63,8 @@
   "messageId": "Message ID: <0/>",
   "channelId": "Channel ID: <0/>",
   "guildId": "Server ID: <0/>",
+  "threadWebhookApplyPrompt": "<open>Thread ID</open> specified in URL. <toggle>Apply to messages</toggle>",
+  "threadWebhookApplyConfirm": "Thread will be applied to all messages. <toggle>Undo</toggle>",
   "createdAt": "Created on {{ createdAt, MMM D, YYYY }}",
   "createdAtTime": "Created {{ createdAt, dddd, MMMM D, YYYY h:mm:ss A }}",
   "successResultTroubleshoot": "If you cannot see the message, make sure it wasn't deleted by another bot. Some moderation bots consider all webhook messages to be spam by default.",
