feat(site): unhide new message creation prompt

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -101,6 +101,7 @@
   "share": "Share",
   "shareMessage": "Share Message",
   "new": "NEW",
+  "beta": "BETA",
   "addMessage": "Add Message",
   "defaultMessageCreationChoice": "Default New Message Type",
   "standardMessage": "Standard Message",
