--- a/packages/bot/src/i18n/fr.json
+++ b/packages/bot/src/i18n/fr.json
@@ -183,5 +183,12 @@
       },
       "description": "Configurez des déclencheurs pour réagir à des événements dans votre serveur"
     }
+  },
+  "webhookDelete": {
+    "confirm": "Êtes-vous sûr de vouloir supprimer ce webhook ? Cela rendra impossible la modification des messages qu'il a envoyés.",
+    "forbidden": "Vous n'avez pas les autorisations pour gérer les webhooks.",
+    "wrongServer": "Le webhook n'existe pas ou n'est pas sur ce serveur.",
+    "success": "Le webhook a été supprimé avec succès.",
+    "cancel": "Le webhook est sain et sauf."
   }
 }
